--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,25 @@
 <h1>Sample Form</h1>
 
 
-<form #userForm='ngForm' (ngSubmit)="onSubmit(userForm)" >
-  <input  type="text" name="email" placeholder="Enter Email" ngModel/>
+<form  [formGroup]='loginForm'>
+  <div>
+    <input  type="text" name="email" placeholder="Enter Email" 
+    formControlName='email'
+/>
+
+  </div>
+
+
   <br/>
   <br/>
-  <input type="password" name="password" placeholder="Enter Password" ngModel/>
+  <span *ngIf= "email.invalid">Email Field is invalid</span>
+
+  <br/>
+  <br/>
+  <input type="password" name="password" placeholder="Enter Password"
+  
+  formControlName='password'
+  />
   <br/>
   <br/>
   <button type="submit">Login</button>
