--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,26 +1,25 @@
 <h1>Sample Form</h1>
 
 
-<form  [formGroup]='loginForm'>
+<form #userForm='ngForm' (ngSubmit)="onSubmit(userForm.value)">
   <div>
-    <input  type="text" name="email" placeholder="Enter Email" 
-    formControlName='email'
-/>
+    <input type="text" name="email" required placeholder="Enter Email" ngModel
+      #email='ngModel'
+    />
 
   </div>
 
+  <span class="error"   *ngIf = 'email.invalid'>Email field cannot be empty</span>
+  <br />
+  <br />
 
-  <br/>
-  <br/>
-  <span *ngIf= "email.invalid">Email Field is invalid</span>
-
-  <br/>
-  <br/>
-  <input type="password" name="password" placeholder="Enter Password"
-  
-  formControlName='password'
+  <br />
+  <br />
+  <input type="password" name="password" required placeholder="Enter Password" ngModel 
+      #email='ngModel' 
   />
-  <br/>
-  <br/>
+  <br />
+  <br />
+  
   <button type="submit">Login</button>
 </form>
