implement custom pipeline

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,7 @@
 <p> Date =>>>>> {{date | date:'dd MMMM YYYY'}}</p>
 <p>{{date | date:'shortTime'}}</p>
 <p>Json pipeline =>>>{{nameObject|json}}</p>
+<p>Custom pipeLine of a number =>>>{{27|square}}</p>
 
 <form #userForm='ngForm' (ngSubmit)="onSubmit(userForm.value)">
   <div>
